# cag

./: .gitignore  README.md  main.py  pyproject.toml  test
cag/core/: base.py  format.py
cag/data_source/: __init__.py  base.py  error.py  img_openai.py  pdf.py  text.py
cag/formatters/: base.py  xml.py  xml_format.py
src/core/: base.py  format.py  types.py
src/data_source/: base.py  text_source.py
src/formatters/: base.py  xml_format.py
tests/integr/: test_open_ai_img_source.py  test_pdf_source.py  test_text_source.py
tests/unit/: test_context.py  test_xml_formatter.py
